initialise webpage content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>Test</title>
+<head>
+    <title>Kah Xuan Lim</title>
+    <link rel="stylesheet" href="./styles/main.css">
+</head>
+
+<body>
+
+    <div class="navigation">
+        <ul>
+            <li><span>Kah Xuan</span></li>
+            <li><a href=>projects</a></li>
+            <li><a href=>news</a></li>
+            <li><a href=>experience</a></li>
+            <li><a href=>education</a></li>
+        </ul>
+    </div>
+
+    <div class="main">
+
+        <div class="title">
+            <div class="name">Kah Xuan <span>Lim</span></div>
+            <div class="desc">Second year computer science student, getting things done.</div>
+            <ul class="contacts">
+                <li><a href="mailto:xuanlim77@gmail.com"><img src="images/icon-gmail.svg"></a></li>
+                <li><a href="https://www.linkedin.com/in/kahxuan/"><img src="images/icon-in.svg"></a></li>
+                <li><a href="https://www.facebook.com/kahxuan77"><img src="images/icon-fb.svg"></a></li>
+                <li><a href="https://www.instagram.com/k_xuanlim"><img src="images/icon-insta.svg"></a></li>
+                <li><a href="https://github.com/kahxuan"><img src="images/icon-github.svg"></a></li>
+            </ul>
+        </div>
+
+        <div class="center"><hr class="hline"></div>
         
-        <link rel="stylesheet" type="text/css" href="/styles/main.css">
-    </head>
-    <body>
-        Hello
-    </body>
+
+<!--         <div class="facts">
+            Python
+            cook
+            chinese calligraphy
+            chinese
+            hokkien
+
+        </div>         -->
+        <div class="center"><div class="content">
+            <div class="content-desc">Computer Science Major</div>
+            <div class="content-subdesc">Monash University Malaysia</div>
+            <div class="content-details">
+                <div class="details-header">
+                    <span>Relevant courseworks</span>
+                </div>
+                <div class="details-desc">
+                    <ul>
+                        <li>#Advanced algorithm and data structure</li>
+                        <li>#Computatational linear algebra</li>
+                        <li>#Modelling for data analysis</li>
+                        <li>#Linear algebra (advanced)</li>
+                        <li>#Databases</li>
+                        <li>#Object orientated design and implementation</li>
+                    </ul>
+                </div>
+            </div>
+        </div></div>        
+
+        <div class="center"><div class="content">
+            <div class="content-desc">Former data analyst intern</div>
+            <div class="content-subdesc">BDO Kuala Lumpur</div>
+            <div class="details-header">
+                <span>Tools</span>
+            </div>
+            <div class="details-desc">
+                <ul>
+                    <li>#Pandas</li>
+                    <li>#PowerBI</li>
+                    <li>#Kivy</li>
+                    <li>#CaseWare Idea</li>
+                    <li>#Microsoft Excel</li>
+                </ul>
+            </div>
+        </div></div>
+
+        <div class="center"><div class="content">
+             <div class="content-desc">Study abroad program</div>
+            <div class="content-subdesc">Monash University Clayton</div>
+        </div></div>
+
+        <div class="center"><div class="content">
+            <div class="content-desc">Project</div>
+            <div class="content-subdesc">Stay tuned!</div>
+        </div></div>
+
+
+    </div>
+
+    <div class="footer">
+        <div class="footer-content">
+            &copy; 2020 Kah Xuan Lim
+        </div>
+    </div>
+
+
+
+</body>
+
+
+
 </html>
