--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Kah Xuan Lim</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
