update content border style

--- a/index.html
+++ b/index.html
@@ -46,35 +46,29 @@
             <div class="content-desc">Computer Science Major</div>
             <div class="content-subdesc">Monash University Malaysia</div>
             <div class="content-details">
-                <div class="details-header">
-                    <span>Relevant courseworks</span>
-                </div>
-                <div class="details-desc">
-                    <ul>
-                        <li>#Advanced algorithm and data structure</li>
-                        <li>#Computatational linear algebra</li>
-                        <li>#Modelling for data analysis</li>
-                        <li>#Linear algebra (advanced)</li>
-                        <li>#Databases</li>
-                        <li>#Object orientated design and implementation</li>
-                    </ul>
-                </div>
+                <ul>
+                    <li><span>Relevant courseworks</span></li>
+                    <li>[Advanced algorithm and data structure]</li>
+                    <li>[Computatational linear algebra]</li>
+                    <li>[Modelling for data analysis]</li>
+                    <li>[Linear algebra (advanced)]</li>
+                    <li>[Databases]</li>
+                    <li>[Object orientated design and implementation]</li>
+                </ul>
             </div>
         </div></div>        
 
         <div class="center"><div class="content">
             <div class="content-desc">Former data analyst intern</div>
             <div class="content-subdesc">BDO Kuala Lumpur</div>
-            <div class="details-header">
-                <span>Tools</span>
-            </div>
-            <div class="details-desc">
+            <div class="content-details">
                 <ul>
-                    <li>#Pandas</li>
-                    <li>#PowerBI</li>
-                    <li>#Kivy</li>
-                    <li>#CaseWare Idea</li>
-                    <li>#Microsoft Excel</li>
+                    <li><span>Tools</span></li>
+                    <li>[Pandas]</li>
+                    <li>[PowerBI]</li>
+                    <li>[Kivy]</li>
+                    <li>[CaseWare Idea]</li>
+                    <li>[Excel]</li>
                 </ul>
             </div>
         </div></div>
