Add picture of myself

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Kah Xuan Lim</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
         <ul>
             <li><span>Kah Xuan</span></li>
             <li><a href=>projects</a></li>
-            <li><a href=>news</a></li>
+            <li><a href=>updates</a></li>
             <li><a href=>experience</a></li>
             <li><a href=>education</a></li>
         </ul>
@@ -20,6 +20,7 @@
     <div class="main">
 
         <div class="title">
+            <div class="me"><img src="images/me.jpg"></div>
             <div class="name">Kah Xuan <span>Lim</span></div>
             <div class="desc">Second year computer science student, getting things done.</div>
             <ul class="contacts">
@@ -33,17 +34,8 @@
 
         <div class="center"><hr class="hline"></div>
         
-
-<!--         <div class="facts">
-            Python
-            cook
-            chinese calligraphy
-            chinese
-            hokkien
-
-        </div>         -->
         <div class="center"><div class="content">
-            <div class="content-desc">Computer Science Major</div>
+            <div class="content-desc">Computer science major</div>
             <div class="content-subdesc">Monash University Malaysia</div>
             <div class="content-details">
                 <ul>
@@ -74,12 +66,12 @@
         </div></div>
 
         <div class="center"><div class="content">
-             <div class="content-desc">Study abroad program</div>
+             <div class="content-desc">Study abroad <i>Happening now</i></div>
             <div class="content-subdesc">Monash University Clayton</div>
         </div></div>
 
         <div class="center"><div class="content">
-            <div class="content-desc">Project</div>
+            <div class="content-desc">Projects</div>
             <div class="content-subdesc">Stay tuned!</div>
         </div></div>
 
