fix typo in unit name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><span>Relevant courseworks</span></li>
                     <li>[Advanced algorithm and data structure]</li>
-                    <li>[Computatational linear algebra]</li>
+                    <li>[Computational linear algebra]</li>
                     <li>[Modelling for data analysis]</li>
                     <li>[Linear algebra (advanced)]</li>
                     <li>[Databases]</li>
