add navigation links

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <div class="navigation">
         <ul>
             <li><span>Kah Xuan</span></li>
-            <li><a href=>projects</a></li>
-            <li><a href=>updates</a></li>
-            <li><a href=>experience</a></li>
-            <li><a href=>education</a></li>
+            <li><a href="#projects">projects</a></li>
+            <li><a href="#updates">updates</a></li>
+            <li><a href="#experience">experience</a></li>
+            <li><a href="#education">education</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
     </div>
 
     <div class="main">
 
-        <div class="title">
+        <div class="title" id="contact">
             <div class="me"><img src="images/me.jpg"></div>
             <div class="name">Kah Xuan <span>Lim</span></div>
             <div class="desc">Second year computer science student, getting things done.</div>
@@ -34,7 +35,7 @@
 
         <div class="center"><hr class="hline"></div>
         
-        <div class="center"><div class="content">
+        <div class="center" id="education"><div class="content">
             <div class="content-desc">Computer science major</div>
             <div class="content-subdesc">Monash University Malaysia</div>
             <div class="content-details">
@@ -50,7 +51,7 @@
             </div>
         </div></div>        
 
-        <div class="center"><div class="content">
+        <div class="center" id="experience"><div class="content">
             <div class="content-desc">Former data analyst intern</div>
             <div class="content-subdesc">BDO Kuala Lumpur</div>
             <div class="content-details">
@@ -65,12 +66,12 @@
             </div>
         </div></div>
 
-        <div class="center"><div class="content">
+        <div class="center" id="updates"><div class="content">
              <div class="content-desc">Study abroad <i>Happening now</i></div>
             <div class="content-subdesc">Monash University Clayton</div>
         </div></div>
 
-        <div class="center"><div class="content">
+        <div class="center" id="projects"><div class="content">
             <div class="content-desc">Projects</div>
             <div class="content-subdesc">Stay tuned!</div>
         </div></div>
