fix contact link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#updates">updates</a></li>
             <li><a href="#experience">experience</a></li>
             <li><a href="#education">education</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="">contact</a></li>
         </ul>
     </div>
 
