Add project image and link

--- a/index.html
+++ b/index.html
@@ -72,8 +72,15 @@
         </div></div>
 
         <div class="center" id="projects"><div class="content">
-            <div class="content-desc">Projects</div>
-            <div class="content-subdesc">Stay tuned!</div>
+            <div class="content-subdesc">Projects<i>Stay tuned!</i></div>
+            <div class="project">
+                <a  href="https://github.com/kahxuan/asteroids" title="buzz hover text">
+                    <img src="images/asteroids-demo.tiff" title='Asteroids'> 
+                </a>
+                <a><img src="images/grey.png"></a>
+                <a><img src="images/grey.png"></a> 
+            </div>
+
         </div></div>
 
 
@@ -88,7 +95,4 @@
 
 
 </body>
-
-
-
 </html>
