fix project image link

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div class="center" id="projects"><div class="content">
             <div class="content-subdesc">Projects<i>Stay tuned!</i></div>
             <div class="project">
-                <a  href="https://github.com/kahxuan/asteroids" title="buzz hover text">
-                    <img src="images/asteroids-demo.tiff" title='Asteroids'> 
+                <a  href="https://github.com/kahxuan/asteroids">
+                    <img src="images/asteroids-demo.png" title='Asteroids'> 
                 </a>
                 <a><img src="images/grey.png"></a>
                 <a><img src="images/grey.png"></a> 
