add project link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a  href="https://github.com/kahxuan/asteroids">
                     <img src="images/asteroids-demo.png" title='Asteroids'> 
                 </a>
-                <a><img src="images/grey.png"></a>
+                <a href="https://github.com/kahxuan/course_planner"><img src="images/course-planner.png"></a>
                 <a><img src="images/grey.png"></a> 
             </div>
 
