fix style transfer link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <img src="images/asteroids-demo.png" title='Asteroids'> 
                 </a>
                 <a href="https://github.com/kahxuan/course_planner"><img src="images/course-planner.png" title='Course Planner'></a>
-                <a href="https://github.com/kahxuan/https://github.com/kahxuan/neural-style-transfer"><img src="images/style-transfer.png" title='Style Transfer'></a>
+                <a href="https://github.com/kahxuan/neural-style-transfer"><img src="images/style-transfer.png" title='Style Transfer'></a>
             </div>
 
         </div></div>
