add project link

--- a/index.html
+++ b/index.html
@@ -67,18 +67,26 @@
         </div></div>
 
         <div class="center" id="updates"><div class="content">
-             <div class="content-desc">Study abroad <i>Happening now</i></div>
+             <div class="content-desc">Study abroad <i>One month ago</i></div>
             <div class="content-subdesc">Monash University Clayton</div>
         </div></div>
 
         <div class="center" id="projects"><div class="content">
-            <div class="content-subdesc">Projects<i>Stay tuned!</i></div>
+            <div class="content-subdesc">Projects<i>Stay tuned for more!</i></div>
             <div class="project">
                 <a  href="https://github.com/kahxuan/asteroids">
                     <img src="images/asteroids-demo.png" title='Asteroids'> 
                 </a>
                 <a href="https://github.com/kahxuan/course_planner"><img src="images/course-planner.png" title='Course Planner'></a>
                 <a href="https://github.com/kahxuan/neural-style-transfer"><img src="images/style-transfer.png" title='Style Transfer'></a>
+            </div>
+
+            <div class="project">
+                <a href="https://github.com/kahxuan/insta_clustering">
+                    <img src="images/insta-clustering.png" title='Insta Clustering'> 
+                </a>
+                <a><img src="images/grey.png"></a>
+                <a><img src="images/grey.png"></a>
             </div>
 
         </div></div>
