fix smooth scrolling for contact section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <li><a href="#projects">projects</a></li>
             <li><a href="#experience">experience</a></li>
             <li><a href="#education">education</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="#landing">contact</a></li>
         </ul>
     </div>
 
-    <div class="main"><div>
+    <div class="main" id="landing"><div>
 
         <div class="home" id="contact"><div>
             <div class="me"><img src="images/me.jpg"></div>
