update project image

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             </div>
 
             <div class="project">
-                <a href="https://github.com/kahxuan/insta_clustering">
-                    <img src="images/insta-clustering.png" title='Insta Clustering'> 
+                <a href="https://github.com/kahxuan/insta_network_analysis">
+                    <img src="images/insta-analysis.png" title='Insta Analysis'> 
                 </a>
                 <a><img src="images/grey.png"></a>
                 <a><img src="images/grey.png"></a>
