fix image formatting

--- a/html/projects/cccr.html
+++ b/html/projects/cccr.html
@@ -436,16 +436,12 @@
 
       <div class="row image-row justify-content-center text-center">
         <div class="col-6 col-md-5 col-lg-4">
-          <div class="row justify-content-center text-center">
-            <img class="img-fluid" draggable="false" src="./images/cccr/tsne1.png"/>
-            <span class="image-subcaption">Silhouette score = 0.3375, k = 3</span>
-          </div>
+          <img class="img-fluid" draggable="false" src="./images/cccr/tsne1.png"/>
+          <span class="image-subcaption">Silhouette score = 0.3375, k = 3</span>
         </div>
         <div class="col-6 col-md-5 col-lg-4">
-          <div class="row justify-content-center text-center">
-            <img class="img-fluid" draggable="false" src="./images/cccr/tsne2.png"/>
-            <span class="image-subcaption">Silhouette score = 0.2648, k = 2</span>
-          </div>
+          <img class="img-fluid" draggable="false" src="./images/cccr/tsne2.png"/>
+          <span class="image-subcaption">Silhouette score = 0.2648, k = 2</span>
         </div>
 
         <div class="image-caption">t-SNE visualisation of the clusters for character  "个" and "时"<br/>Images in the circled region belongs to the wrong cluster</div>        
@@ -505,7 +501,7 @@
           <div class="row justify-content-center text-center">
             <div class="col-2 col-xs-3 self-align-center">
               <div class="container d-flex h-100">
-              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation1.png" class="img-fluid"/></div></div>
+              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation1.png" style="height:70px;"/></div></div>
             </div>
             <div class="col-1 self-align-center">
               <div class="container d-flex h-100">
@@ -526,7 +522,7 @@
             </div>
             <div class="col-2 col-xs-3 self-align-center">
               <div class="container d-flex h-100">
-              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation3.png" class="img-fluid"/></div></div>
+              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation3.png" style="height:70px;"/></div></div>
             </div>
           </div>
         </div>
@@ -605,7 +601,7 @@
       <div class="image-row row  justify-content-center text-center">
         <div class="col-12 col-md-10 col-lg-9 col-xl-8">
           <div class="row justify-content-center text-center">
-            <div class="col-4 col-md-3">
+            <div class="col-3">
               <div class="container d-flex h-100">
                 <div class="row justify-content-center align-self-center text-center">
                   <p class="text-left" style="font-size: 12pt;">Misclassified samples</p>
@@ -625,7 +621,7 @@
               <img draggable="false" src="./images/cccr/similar_true4.png"  class="img-fluid"/>
             </div>
 
-            <div class="col-4 col-md-3">
+            <div class="col-3">
             </div>
             <div class="col-2 mb-2">
               <span class="image-subcaption">然</span>
@@ -640,7 +636,7 @@
               <span class="image-subcaption">来</span>
             </div>
 
-            <div class="col-4 col-md-3">
+            <div class="col-3">
               <div class="container d-flex h-100">
                 <div class="row justify-content-center align-self-center text-center">
                   <p class="text-left" style="font-size: 12pt;">Samples from predicted class</p>
@@ -660,7 +656,7 @@
               <img draggable="false" src="./images/cccr/similar_pred4.png"  class="img-fluid"/>
             </div>
 
-            <div class="col-4 col-md-3">
+            <div class="col-3">
             </div>
             <div class="col-2">
               <span class="image-subcaption">就</span>
