--- a/html/projects/cccr.html
+++ b/html/projects/cccr.html
@@ -248,33 +248,33 @@
           <div class="row justify-content-center text-center">
             <div class="col-2 align-self-center">
               <img draggable="false" src="./images/cccr/image_p1.png" class="img-fluid pl-0 pr-0 pl-md-3 pr-md-3 pl-lg-3 pr-lg-3"/>
-              <div class="image-subcaption" style="height: 48px;">Raw image</div>
+              <div class="image-subcaption" style="height: 55px;">Raw image</div>
             </div>
             <div style="width: 20px;">
               <i class="fas fa-angle-right fa-lg red mt-3 mt-lg-4" aria-hidden="true"></i>
             </div>
             <div class="col-2 align-self-center">
               <img draggable="false" src="./images/cccr/image_p2.png" class="img-fluid pl-0 pr-0 pl-md-3 pr-md-3 pl-lg-3 pr-lg-3"/>
-              <div class="image-subcaption" style="height: 48px;">Gaussian blur</div>
+              <div class="image-subcaption" style="height: 55px;">Gaussian blur</div>
             </div>
             <div style="width: 20px;">
               <i class="fas fa-angle-right fa-lg red mt-3 mt-lg-4" aria-hidden="true"></i>
             </div>
             <div class="col-2 align-self-center">
               <img draggable="false" src="./images/cccr/image_p3.png" class="img-fluid pl-0 pr-0 pl-md-3 pr-md-3 pl-lg-3 pr-lg-3"/>
-              <div class="image-subcaption" style="height: 48px;">K-means segmentation</div>
+              <div class="image-subcaption" style="height: 55px;">K-means segmentation</div>
             </div>
             <div style="width: 20px;">
               <i class="fas fa-angle-right fa-lg red mt-3 mt-lg-4" aria-hidden="true"></i>
             </div>
             <div class="col-2 align-self-center">
               <img draggable="false" src="./images/cccr/image_p4.png" class="img-fluid pl-0 pr-0 pl-md-3 pr-md-3 pl-lg-3 pr-lg-3"/>
-              <div class="image-subcaption" style="height: 48px;">Size normalisation</div>
+              <div class="image-subcaption" style="height: 55px;">Size normalisation</div>
             </div>
 
           </div>
         </div>
-        <div class="image-caption col-12">Operations applied for initial processing</div>
+        <div class="image-caption col-12" style="margin: 12px;">Operations applied for initial processing</div>
       </div>
 
       <p>Some images with poor image quality have to be enhanced manually to fix the segmentation failures.</p>
@@ -499,30 +499,38 @@
       <div class="image-row row justify-content-center text-center">
         <div class="col-12 col-md-10 col-lg-8 col-xl-7">
           <div class="row justify-content-center text-center">
-            <div class="col-2 col-xs-3 self-align-center">
-              <div class="container d-flex h-100">
-              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation1.png" style="height:70px;"/></div></div>
+            <div class="col-12 col-sm-3 self-align-center mb-2 mb-sm-0">
+              <div class="container d-flex h-100 justify-content-center align-self-center text-center">
+              <div class="row justify-content-center align-self-center">
+                <div class="col-2 col-sm-12">
+                  <img draggable="false" src="./images/cccr/augmentation1.png" class="img-fluid"/>
+                </div>
+              </div></div>
             </div>
-            <div class="col-1 self-align-center">
-              <div class="container d-flex h-100">
+            <div class="col-12 col-sm-1 self-align-center mb-1 mb-sm-0">
+              <div class="container d-flex h-100 justify-content-center align-self-center text-center">
                 <div class="row justify-content-center align-self-center text-center">
                   <i class="fas fa-angle-right fa-lg red" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-sm-4">
               <div class="row"><div class="col"><img draggable="false" src="./images/cccr/augmentation2.png" class="img-fluid"/></div></div>
             </div>
-            <div class="col-1">
-              <div class="container d-flex h-100">
+            <div class="col-12 col-sm-1 mt-1 mt-sm-0">
+              <div class="container d-flex h-100 justify-content-center align-self-center text-center">
                 <div class="row justify-content-center align-self-center text-center">
                   <i class="fas fa-angle-right fa-lg red" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
-            <div class="col-2 col-xs-3 self-align-center">
-              <div class="container d-flex h-100">
-              <div class="row justify-content-center align-self-center"><img draggable="false" src="./images/cccr/augmentation3.png" style="height:70px;"/></div></div>
+            <div class="col-12 col-sm-3 self-align-center mt-2 mt-sm-0">
+              <div class="container d-flex h-100 justify-content-center align-self-center text-center">
+              <div class="row justify-content-center align-self-center">
+                <div class="col-2 col-sm-12">
+                  <img draggable="false" src="./images/cccr/augmentation3.png" class="img-fluid"/>
+                </div>
+              </div></div>
             </div>
           </div>
         </div>
@@ -608,34 +616,22 @@
                 </div>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 mb-3">
               <img draggable="false" src="./images/cccr/similar_true1.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_true2.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_true3.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_true4.png"  class="img-fluid"/>
-            </div>
-
-            <div class="col-3">
-            </div>
-            <div class="col-2 mb-2">
               <span class="image-subcaption">然</span>
             </div>
-            <div class="col-2 mb-2">
+            <div class="col-2 mb-3">
+              <img draggable="false" src="./images/cccr/similar_true2.png"  class="img-fluid"/>
               <span class="image-subcaption">最</span>
             </div>
-            <div class="col-2 mb-2">
+            <div class="col-2 mb-3">
+              <img draggable="false" src="./images/cccr/similar_true3.png"  class="img-fluid"/>
               <span class="image-subcaption">意</span>
             </div>
-            <div class="col-2 mb-2">
+            <div class="col-2 mb-3">
+              <img draggable="false" src="./images/cccr/similar_true4.png"  class="img-fluid"/>
               <span class="image-subcaption">来</span>
             </div>
-
             <div class="col-3">
               <div class="container d-flex h-100">
                 <div class="row justify-content-center align-self-center text-center">
@@ -645,31 +641,21 @@
             </div>
             <div class="col-2">
               <img draggable="false" src="./images/cccr/similar_pred1.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_pred2.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_pred3.png"  class="img-fluid"/>
-            </div>
-            <div class="col-2">
-              <img draggable="false" src="./images/cccr/similar_pred4.png"  class="img-fluid"/>
-            </div>
-
-            <div class="col-3">
-            </div>
-            <div class="col-2">
               <span class="image-subcaption">就</span>
             </div>
             <div class="col-2">
+              <img draggable="false" src="./images/cccr/similar_pred2.png"  class="img-fluid"/>
               <span class="image-subcaption">家</span>
             </div>
             <div class="col-2">
+              <img draggable="false" src="./images/cccr/similar_pred3.png"  class="img-fluid"/>
               <span class="image-subcaption">一</span>
             </div>
             <div class="col-2">
+              <img draggable="false" src="./images/cccr/similar_pred4.png"  class="img-fluid"/>
               <span class="image-subcaption">成</span>
             </div>
+
           </div>
         </div>
         <div class="image-caption col-12">Similar characters</div>
