justify left in nav bar for small screen

--- a/html/experience.html
+++ b/html/experience.html
@@ -19,7 +19,7 @@
 
         <div class="card rounded-0" id="card-content">
             <div class="card-header bg-transparent rounded-0">
-                <ul class="nav card-header-tabs justify-content-around" role="tablist">
+                <ul class="nav card-header-tabs justify-content-left justify-content-sm-around" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link font-weight-bold" role="tab" aria-controls="experience" aria-selected="true">Experience</a>
                     </li>
