fix gammar error

--- a/html/projects/cccr.html
+++ b/html/projects/cccr.html
@@ -444,7 +444,7 @@
           <span class="image-subcaption">Silhouette score = 0.2648, k = 2</span>
         </div>
 
-        <div class="image-caption">t-SNE visualisation of the clusters for character  "个" and "时"<br/>Images in the circled region belongs to the wrong cluster</div>        
+        <div class="image-caption">t-SNE visualisation of the clusters for character  "个" and "时"<br/>Images in the circled region belong to the wrong cluster</div>        
       </div>
 
       <p>Since the purpose of variant clustering is to ensure each variant has roughly equal size, some minor errors are still acceptable at this stage.</p>
