--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">    
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE1LKQVC3M"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-XE1LKQVC3M');
+        </script>
         <link rel="stylesheet" href="./styles/main.css">
         <link rel="stylesheet" href="./styles/index.css">
         <title>Kah Xuan Lim</title>
