--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@
     <body>
         <div class="container p-5" id="top">
             <div class="card text-center px-5">
-                <div class="card-body px-3 mb-4">
+                <div class="card-body px-2 mb-4">
                     <img class="rounded-circle col-md-4 my-3" src="images/me.jpg" draggable="false">
                     <h1 class="card-title my-2">Kah Xuan <span class="red">Lim</span></h1>
-                    <span class="card-text">Computer science graduate, getting things done.</span>
-                    <ul class="list-inline mt-2">
+                    <div>
+                        <span class="card-text">BSc Computer Science &nbsp∙&nbsp MSc Statistics</span>
+                    </div>
+                    <div class="mt-2">
+                        <span class="card-text">Getting things done.</span>
+                    </div>
+                    <!-- <ul class="list-inline mt-2">
                         <li class="list-inline-item">Interests</li>
                         <li class="list-inline-item">Data science</li>
                         <li class="list-inline-item">Business process automation</li>
-                    </ul>
+                    </ul> -->
                     
                     <div class="row justify-content-around col-md-5 mx-auto mt-4" id="row-contact">
                         <a target="_blank" class="card-text" href="mailto:xuanlim77@gmail.com">
